modifiche ad utenza controller